# smart-compass-rs

./: Cargo.toml  README.md  memory.x
.cargo/: config
smart_compass/: Cargo.toml
smart_compass/src/: arduino.rs  battery.rs  compass.rs  lib.rs  location.rs  network.rs  storage.rs  timers.rs
smart_compass/src/lights/: clock.rs  focalintent.rs  mod.rs  patterns.rs
smart_compass/src/lights/patterns/: clock.rs  compass.rs  lines.rs  mod.rs  pacman.rs  pride.rs  sunflower.rs  tests.rs  waves.rs
smart_compass_feather_m0/: Cargo.toml
smart_compass_stm32f3_discovery/: Cargo.toml
smart_compass_stm32f3_discovery/.cargo/: config
src/: battery.rs  lib.rs  location.rs  main.rs  mutex.rs  network.rs  periodic.rs  storage.rs
src/lights/: mod.rs
