[workspace]
members = [
    "smart_compass",
    "smart_compass_feather_m0",
    "smart_compass_stm32f3_discovery",
]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[patch.crates-io]
"atsamd-hal" = { path = "../atsamd/hal" }
radio-sx127x = { path = "../rust-radio-sx127x" }
