[package]
name = "smart_compass_feather_m0"
version = "0.1.0"
authors = ["Bryan Stitt <bryan@stitthappens.com>"]
edition = "2018"

[features]
default = ["usb"]

usb = ["feather_m0/usb", "usb-device", "usbd-serial"]

[dependencies]
alloc-cortex-m = "0.4"
cortex-m = "*"
cortex-m-rtic = "0.5"
# TODO: update to feather_m0 to 0.7 once I figure out what changed
feather_m0 = "0.7"
heapless = "0.5"
numtoa = "0.2"
panic-halt = { version = "0.2" }
shared-bus-rtic = { version = "0.2.2", features = ["thumbv6"] }
smart_compass = { path = "../smart_compass", features = ["thumbv6", "lights_interrupt_free"] }

# make sure ws2812-timer-delay crate uses the same smart-leds-trait crate as smart_compass
ws2812-timer-delay = { version = "0.3", features = ["slow"] }

# TODO: make sure these match the feather_m0 crate! (or have them export it)
cortex-m-rt = "0.6"
usb-device = { version = "0.2", optional = true }
usbd-serial = { version = "0.1", optional = true }

# this lets you use `cargo fix`!
[[bin]]
name = "test_lights"
test = false
bench = false
required-features = ["usb"]
